syntax = "proto3";

option java_multiple_files = true;
option java_package = "cl.ucn.disc.pdis.fivet.grpc";

message FichaMedicaEntity {
  int32 numero = 1;
  string nombrePaciente = 2;
  string especie = 3;
  string fechaNacimiento = 4;
  string raza = 5;
  string color = 6;
  string tipo = 7;
  SexoEntity sexo = 8;
  PersonaEntity duenio = 9;
  repeated ControlEntity controles = 10;
}

message PersonaEntity {
  string rut = 1;
  string nombre = 2;
  string email = 3;
  string direccion = 4;
}

message ControlEntity {
  string fecha = 1;
  double temperatura = 2;
  double peso = 3;
  double altura = 4;
  string diagnostico = 5;
  PersonaEntity veterinario = 6;
  FichaMedicaEntity fichaMedica = 7;
}

enum SexoEntity {
  UNDEFINED = 0;
  MACHO = 1;
  HEMBRA = 2;
}

message AuthenticationReq {
  string login = 1;
  string password = 2;
}

message PersonaReply {
  PersonaEntity persona = 1;
}

message AddPersonaReq {
  PersonaEntity persona = 1;
}

message AddControlReq {
  ControlEntity control = 1;
  int32 numeroFichaMedica = 2;
}

message FichaMedicaReply {
  FichaMedicaEntity fichaMedica = 1;
}

message RetrieveFichaMedicaReq {
  int32 numeroFichaMedica = 1;
}

message SearchFichaMedicaReq {
  string query = 1;
}

message AddFichaMedicaReq {
  FichaMedicaEntity fichaMedica = 1;
}

service FivetService {
  rpc authenticate(AuthenticationReq) returns (PersonaReply) {}
  rpc addPersona(AddPersonaReq) returns (PersonaReply) {}
  rpc addControl(AddControlReq) returns (FichaMedicaReply) {}
  rpc retrieveFicha(RetrieveFichaMedicaReq) returns (FichaMedicaReply) {}
  rpc searchFicha(SearchFichaMedicaReq) returns (stream FichaMedicaReply) {}
  rpc addFicha(AddFichaMedicaReq) returns (FichaMedicaReply) {}
}
